--- a/src/css/base.css
+++ b/src/css/base.css
@@ -6,8 +6,8 @@
   line-height: 1.5;
   font-weight: 400;
 
-  color: #242424;
-  background-color: rgba(255, 255, 255, 0.87);
+  color: #cecece;
+  background-color: rgba(7, 6, 6, 0.87);
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -19,7 +19,6 @@
 body {
   display: flex;
   flex-direction: column;
-  min-width: 100vw;
   min-height: 100vh;
   margin: 0;
 }
