--- a/src/partials/section1.html
+++ b/src/partials/section1.html
@@ -1,7 +1,7 @@
 <section>
   <div>
     <h2>Section 1</h2>
-    <p>
+    <p class="pricing__text">
       Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fugit
       perspiciatis veniam dignissimos reprehenderit ullam hic aut maiores ab
       soluta nam. Assumenda officiis repudiandae tenetur commodi quia et
